[gd_scene load_steps=3 format=2]

[ext_resource path="res://Interface/images/left.png" type="Texture" id=1]
[ext_resource path="res://Interface/Interface.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
process_priority = 10
script = ExtResource( 2 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( 755, 435 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 1007, 505 )
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )

[node name="Up" type="TouchScreenButton" parent="."]
position = Vector2( 913, 351 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )

[node name="Down" type="TouchScreenButton" parent="."]
position = Vector2( 840, 591 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 1 )

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="released" from="Left" to="." method="_on_Left_released"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="released" from="Right" to="." method="_on_Right_released"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="released" from="Up" to="." method="_on_Up_released"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="released" from="Down" to="." method="_on_Down_released"]
